Prometheus/files/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-prometheus
  namespace: hbc-monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: prometheus.testvn.click
    http:
      paths:
      - backend:
          service:
            name: prometheus-operated
            port:
              number: 9090
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - prometheus.testvn.click
    secretName: testvn-click-tls
