Prometheus/files/thanos-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-thanos
  namespace: hbc-monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: thanos.testvn.click
    http:
      paths:
      - backend:
          service:
            name: thanos-query
            port:
              number: 9090
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - thanos.testvn.click
    secretName: testvn-click-tls
